# pysparkle

./: README.md  pyproject.toml  rationale.rst
