[tool.poetry]
name = "pysparkle"
version = "0.1.0"
description = "Toolbox to greatly improve your developer experience while writing and debugging pyspark jobs."
authors = ["Franz Wöllert <franz.woellert@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyspark = ">=2.3"
pandas = "^1"

[tool.poetry.dev-dependencies]
pytest = "^7"
Sphinx = "^5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
